# json-schema-to-elm

./: .gitlab-ci.yml  README.md  flake.nix  haskell-json-schema-to-elm.cabal  hie.yaml  json-schema-to-elm.cabal
app/: Elm.hs  ElmConstants.hs  JsonSchema.hs  JsonSchemaNew.hs  JsonSchemaObject.hs  JsonSchemaObjectRef.hs  JsonSchemaProcessed.hs  JsonSchemaTypeEnum.hs  Main.hs  Utils.hs
app/Elm/: Classes.hs  Declaration.hs  Expression.hs  GenError.hs  Import.hs  Program.hs  Type.hs
test-data/: array-of-ints.json  extensive.json  test.json  with-array-record.json  with-array.json  with-dict.json
