cabal-version:      3.4
name:               haskell-json-schema-to-elm
version:            1.0.0
-- synopsis:
-- description:
homepage:
    https://gitlab.desy.de/cfel-sc-public/haskell-json-schema-to-elm

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             CFEL-SC
maintainer:         sc@cfel.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell-json-schema-to-elm
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
